--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Laura Bootstrap Theme</title>
-    <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
+    <title>Denise Matthews Events Management</title>
+    <meta name="description" content="Event Management by Denise Matthews">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
     
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fira+Sans|Roboto:300,400|Questrial|Satisfy">
@@ -13,12 +13,6 @@
     <link rel="stylesheet" type="text/css" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     
-    <!-- =======================================================
-        Theme Name: Laura
-        Theme URL: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/
-        Author: BootstrapMade.com
-        Author URL: https://bootstrapmade.com
-    ======================================================= -->
   </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60" onload="myFunction()">
   <div class="header">
@@ -32,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Laura</a>
+              <a class="navbar-brand" href="#">Denise</a>
             </div>
             <div class="collapse navbar-collapse" id="lauraMenu">
               <ul class="nav navbar-nav navbar-right navbar-border">
@@ -51,8 +45,8 @@
           <div class="row">
             <div class="col-md-12 wow fadeIn delay-05s">
               <div class="banner-text">
-                <h2>Hi, I am <span>Laura</span> Thomson,</h2>
-                <p>A Creative Photographer <br>& Designer</p>
+                <h2>Hi, I am <span>Denise</span> Matthews,</h2>
+                <p>Your Social Media<br>& Events Manager</p>
               </div>
               <div class="overlay-detail text-center">
                   <a href="#about"><i class="fa fa-angle-down"></i></a>
@@ -68,7 +62,7 @@
       <div class="row">
         <div class="col-md-6 text-right">
           <h2 class="title-text">
-            Meet<br><span class="deco">Laura</span> Thomson
+            Meet<br><span class="deco">Denise</span> Matthews
           </h2>
         </div>
         <div class="col-md-6 text-left">
@@ -124,7 +118,7 @@
   <section id="testimonial" class="section-padding wow fadeInUp">
     <div class="container">
       <div class="row">
-        <h2 class="title text-center">See What Our <span class="deco">Client</span> Are Saying ?</h2>
+        <h2 class="title text-center">See What Our <span class="deco">Clients</span> Are Saying ?</h2>
         <div class="test-sec">
           <div class="col-sm-4">
             <blockquote>
@@ -198,15 +192,15 @@
       <div class="row">
           <div class="col-md-6">
               <div class="footer">
-                  © Copyright Laura Theme. All Rights Reserved
+                  © Copyright 2016. All Rights Reserved
                     <div class="credits">
                         <!-- 
                             All the links in the footer should remain intact. 
                             You can delete the links only if you purchased the pro version.
                             Licensing information: https://bootstrapmade.com/license/
                             Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Laura
+                            Designed by <a href="https://bootstrapmade.com/">BootstrapMade.com</a>
                         -->
-                        Designed by <a href="https://bootstrapmade.com/">BootstrapMade.com</a>
                     </div>
               </div>
           </div>
