Revert "Updated navbar highlight colour & logo, portfolio title and pics, and testimonial."
This reverts commit ef74857a9037e1029b1253677ffd78c5cd099e45.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>One Media Events</title>
-    <meta name="description" content="Social Media & Events Management by One Media Events">
-    <meta name="keywords" content="social media, events management">
+    <title>Denise Matthews Events Management</title>
+    <meta name="description" content="Event Management by Denise Matthews">
+    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
     
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fira+Sans|Roboto:300,400|Questrial|Satisfy">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">One Media Events</a>
+              <a class="navbar-brand" href="#">Denise</a>
             </div>
             <div class="collapse navbar-collapse" id="lauraMenu">
               <ul class="nav navbar-nav navbar-right navbar-border">
@@ -44,10 +44,10 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12 wow fadeIn delay-05s">
-<!--               <div class="banner-text">
-                <h2>Hi, We are <span>OME</span>,</h2>
+              <div class="banner-text">
+                <h2>Hi, I am <span>Denise</span> Matthews,</h2>
                 <p>Your Social Media<br>& Events Manager</p>
-              </div> -->
+              </div>
               <div class="overlay-detail text-center">
                   <a href="#about"><i class="fa fa-angle-down"></i></a>
               </div>
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col-md-6 text-right">
           <h2 class="title-text">
-            Meet<br>One Media Events
+            Meet<br><span class="deco">Denise</span> Matthews
           </h2>
         </div>
         <div class="col-md-6 text-left">
@@ -85,21 +85,30 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h2 class="title text-center">Let's <span class="deco">See</span> Our Work</h2>
+          <h2 class="title text-center">Let's <span class="deco">See</span> My Work</h2>
         </div>
         <div class="col-md-12">
           <div id="myGrid" class="grid-padding">
           <div class="col-md-4 col-sm-4 padding-right-zero">
-            <img src="img/port-01.jpg" class="img-responsive">
-            <img src="img/port-02.jpg" class="img-responsive">
+            <img src="img/portfolio01.jpg" class="img-responsive">
+            <img src="img/port01.jpg" class="img-responsive">
+            <img src="img/port02.jpg" class="img-responsive">
+            <img src="img/portfolio01.jpg" class="img-responsive">
           </div>
           <div class="col-md-4 col-sm-4 padding-right-zero">
-            <img src="img/port-03.jpg" class="img-responsive">
-            <img src="img/port-04.jpg" class="img-responsive">
+            <img src="img/portfolio02.jpg" class="img-responsive">
+            <img src="img/port01.jpg" class="img-responsive">
+            <img src="img/port02.jpg" class="img-responsive">
+            <img src="img/portfolio01.jpg" class="img-responsive">
+            <img src="img/port03.jpg" class="img-responsive">
           </div>
           <div class="col-md-4 col-sm-4 padding-right-zero">
-            <img src="img/port-05.jpg" class="img-responsive">
-            <img src="img/port-06.jpg" class="img-responsive">
+            <img src="img/port01.jpg" class="img-responsive">
+            <img src="img/portfolio01.jpg" class="img-responsive">
+            <img src="img/portfolio02.jpg" class="img-responsive">
+            <img src="img/port03.jpg" class="img-responsive">
+            <img src="img/portfolio02.jpg" class="img-responsive">
+            <img src="img/port02.jpg" class="img-responsive">
           </div>
           </div>
         </div>
@@ -112,28 +121,28 @@
         <h2 class="title text-center">See What Our <span class="deco">Clients</span> Are Saying ?</h2>
         <div class="test-sec">
           <div class="col-sm-4">
-            <!-- <blockquote>
+            <blockquote>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamsed commodo nibh ante facilisis bibendum dolor feugiat at. </p>
             </blockquote>
             <div class="carousel-info">
               <div class="pull-left"> <span class="testimonials-name">John Doe</span> <span class="testimonials-post">CEO,  Company Inc.</span> </div>
-            </div> -->
-          </div>
-          <div class="col-sm-4">
-            <blockquote>
-              <p>Highly recommend One Media &amp; Events!<br>Our Christmas party at Puente Romano was perfect thanks to Denise. All our needs were catered for and she was on hand on the night to ensure the whole event ran smoothly. Her responsiveness in relation to requests on the lead-up to the event was extremely prompt. Big thank you from all of us at HFFT.<br>Top-notch Professional!</p>
-            </blockquote>
-            <div class="carousel-info">
-              <div class="pull-left"> <span class="testimonials-name">Laura Guinnane</span> <span class="testimonials-post"><a href='http://www.hfft.com' target="_blank">HFFT.com</a></span> </div>
             </div>
           </div>
           <div class="col-sm-4">
-            <!-- <blockquote>
+            <blockquote>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamsed commodo nibh ante facilisis bibendum dolor feugiat at. </p>
             </blockquote>
             <div class="carousel-info">
               <div class="pull-left"> <span class="testimonials-name">John Doe</span> <span class="testimonials-post">CEO,  Company Inc.</span> </div>
-            </div> -->
+            </div>
+          </div>
+          <div class="col-sm-4">
+            <blockquote>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamsed commodo nibh ante facilisis bibendum dolor feugiat at. </p>
+            </blockquote>
+            <div class="carousel-info">
+              <div class="pull-left"> <span class="testimonials-name">John Doe</span> <span class="testimonials-post">CEO,  Company Inc.</span> </div>
+            </div>
           </div>
         </div>
       </div>
@@ -198,16 +207,16 @@
           <div class="col-md-6 text-right">
               <ul class="social-list">
                   <li>
-                      <a href="http://www.facebook.com/onemediaandevents" target="_blank">
-                          <i class="fa fa-facebook"></i>
-                      </a>
-                  </li>
-                  <li>
-                      <a href="#" target="_blank">
+                      <a href="#">
                           <i class="fa fa-twitter"></i>
                       </a>
                   </li>
-       <!--            <li>
+                  <li>
+                      <a href="#">
+                          <i class="fa fa-dribbble"></i>
+                      </a>
+                  </li>
+                  <li>
                       <a href="#">
                           <i class="fa fa-vimeo"></i>
                       </a>
@@ -216,7 +225,7 @@
                       <a href="#">
                           <i class="fa fa-instagram"></i>
                       </a>
-                  </li> -->
+                  </li>
               </ul>
           </div>
           
