--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
     </div>
   </footer>
   
-    <script src="js/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.bxslider.min.js"></script>
+    <!-- <script src="js/jquery.bxslider.min.js"></script> -->
     <script src="js/wow.js"></script>
     <script src="js/custom.js"></script>
     <script src="contactform/contactform.js"></script>
