Remove contactform.js.

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <!-- <script src="js/jquery.bxslider.min.js"></script> -->
     <script src="js/wow.js"></script>
     <script src="js/custom.js"></script>
-    <script src="contactform/contactform.js"></script>
+    <!-- <script src="contactform/contactform.js"></script> -->
     
   </body>
 </html>
