--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     </div>
   </footer>
   
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <!-- <script src="js/jquery.bxslider.min.js"></script> -->
