--- a/index.html
+++ b/index.html
@@ -67,14 +67,21 @@
         </div>
         <div class="col-md-6 text-left">
           <div class="about-text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>At OME we are committed to bringing the very best in events and marketing services to you.</p>
             <p>&nbsp;</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>In 2005 Profile Advertising was one of the pioneers in e-marketing and social media campaigns representing businesses in Marbella such as Ocean Club, TikiTano Restaurant and Suite Club & Lounge in Puente Romano Hotel.</p>
+            <p>&nbsp;</p>
+            <p>Now relaunched as OME we have expanded our reach to Gibraltar where business, startups, professional and events opportunities are on the increase.</p>
+            <p>&nbsp;</p>
+            <p>One of our most recent campaigns was promoting the prestigious Gibraltar International Literary Festival and Gibraltar StartUp Community Meetups.</p>
             <p>&nbsp;</p>
             <ul class="abt-list">
-              <li>- Excepteur sint occaecat cupidatat non proident.</li>
-              <li>- Duis aute irure dolor in reprehenderit.</li>
-              <li>- Ask the experts.</li>
+              <li>- Communications &amp; PR</li>
+              <li>- Social Media Campaigns</li>
+              <li>- Email Marketing</li>
+              <li>- Event Management & Coordination</li>
+              <li>- Coorporate & Business Launches, Functions, Presentations</li>
+              <li>- Hotel & Restaurant Group Bookings</li>
             </ul>
           </div>
         </div>
@@ -145,7 +152,7 @@
         <div class="col-md-12">
           <div class="contact-sec text-center">
             <h2>Want To <span class="deco">Hire</span> Me?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p> -->
           </div>
         </div>
         
@@ -202,21 +209,21 @@
                           <i class="fa fa-facebook"></i>
                       </a>
                   </li>
-                  <li>
-                      <a href="#" target="_blank">
-                          <i class="fa fa-twitter"></i>
-                      </a>
-                  </li>
-       <!--            <li>
+        <!--           <li>
                       <a href="#">
                           <i class="fa fa-vimeo"></i>
                       </a>
-                  </li>
+                  </li> -->
                   <li>
-                      <a href="#">
+                      <a href="http://www.instagram.com/denisematthewspr" target="_blank">
                           <i class="fa fa-instagram"></i>
                       </a>
-                  </li> -->
+                  </li>
+                  <li>
+                      <a href="http://twitter.com/DeniseBabyO" target="_blank">
+                          <i class="fa fa-twitter"></i>
+                      </a>
+                  </li>
               </ul>
           </div>
           
