--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
               </ul>
               <ul class="nav navbar-nav">
                   <li><a  href="http://www.facebook.com/onemediaandevents" target="_blank">
-                          <i class="fa fa-facebook"></i>
+                          <i class="fa fa-facebook" style="font-size: 22px;"></i>
                       </a>
                   </li>
                   <li>
                       <a href="http://www.instagram.com/denisematthewspr" target="_blank">
-                          <i class="fa fa-instagram"></i>
+                          <i class="fa fa-instagram" style="font-size: 22px;"></i>
                       </a>
                   </li>
                   <li>
                       <a href="http://twitter.com/DeniseBabyO" target="_blank">
-                          <i class="fa fa-twitter"></i>
+                          <i class="fa fa-twitter" style="font-size: 22px;"></i>
                       </a>
                   </li>
                 </ul>
@@ -61,9 +61,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12 wow fadeIn delay-05s">
-<!--               <div class="banner-text">
-                <h2>Hi, We are <span>OME</span>,</h2>
-                <p>Your Social Media<br>& Events Manager</p>
+            <!--   <div class="banner-text">
+                <p>Events &amp; Social Media Manager Experts</p>
               </div> -->
               <div class="overlay-detail text-center">
                   <a href="#about"><i class="fa fa-angle-down"></i></a>
@@ -203,7 +202,7 @@
     <div class="container">
       <!--end row-->
       <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-6">
               <div class="footer">
                   © Copyright 2017. All Rights Reserved
                     <div class="credits">
@@ -216,7 +215,27 @@
                        
                     </div>
               </div>
-          </div>          
+          </div>
+          <div class="col-md-6 text-right">
+              <ul class="social-list">
+                  <li>
+                      <a href="http://www.facebook.com/onemediaandevents" target="_blank">
+                          <i class="fa fa-facebook"></i>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="http://www.instagram.com/denisematthewspr" target="_blank">
+                          <i class="fa fa-instagram"></i>
+                      </a>
+                  </li>
+                  <li>
+                      <a href="http://twitter.com/DeniseBabyO" target="_blank">
+                          <i class="fa fa-twitter"></i>
+                      </a>
+                  </li>
+              </ul>
+          </div>
+          
       </div>
       <!--end row-->
     </div>
